--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
     <button onclick="loadPage('home')">🏠</button>
     <button onclick="loadPage('notes')">🗒️</button>
   </nav>
-
+<!-- PWA INSTALL BUTTON -->
+<button id="installBtn" class="install-btn is-hidden">
+  ⬇️ Install App
+</button>
   <div id="toastRoot" class="toast-root"></div>
 
   <!-- =========================
