--- a/pages/home.html
+++ b/pages/home.html
@@ -19,9 +19,9 @@
     </div>
 
     <nav class="drawer-menu">
-      <button class="drawer-item" onclick="loadPage('settings')">⚙ Settings</button>
-      <button class="drawer-item" onclick="loadPage('about')">ℹ About</button>
-    </nav>
+  <button class="drawer-item" data-page="settings">⚙ Settings</button>
+  <button class="drawer-item" data-page="about">ℹ About</button>
+</nav>
   </aside>
 
   <!-- LAST ACTIVITY -->
