--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
   <script src="js/core/time.js"></script>
   <script src="js/core/utils.js"></script>
   <script src="js/core/store.js"></script>
+  <script src="js/core/settings-store.js"></script>
   <script src="js/core/theme.js"></script>
   <script src="js/core/toast.js"></script>
   <script src="js/app.js"></script>
