--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
        ========================= -->
   <link rel="stylesheet" href="css/components/drawer.css">
   <link rel="stylesheet" href="css/components/toast.css">
+  <link rel="stylesheet" href="css/components/tags.css">
 
   <!-- =========================
        THEME (RESTORED)
@@ -53,6 +54,7 @@
   <script src="js/core/settings-store.js"></script>
   <script src="js/core/theme.js"></script>
   <script src="js/core/toast.js"></script>
+  <script src="js/core/tags.js"></script>
   <script src="js/app.js"></script>
 
   <!-- =========================
