--- a/pages/editor.html
+++ b/pages/editor.html
@@ -33,6 +33,8 @@
         placeholder="airdrop, testnet, zk"
       />
     </label>
+    <!-- TAG SUGGESTIONS (helper, text only) -->
+<div id="tagSuggestions" class="tag-suggestions" hidden></div>
 
     <!-- EDITOR CARD -->
     <div class="editor-card" id="editorCard">
