--- a/pages/editor.html
+++ b/pages/editor.html
@@ -1,3 +1,4 @@
+
 <section class="editor-page page">
 
   <!-- HEADER -->
@@ -32,9 +33,8 @@
         placeholder="airdrop, testnet, zk"
       />
     </label>
-
-    <!-- TAG SUGGESTIONS -->
-    <div id="tagSuggestions" class="tag-suggestions" hidden></div>
+    <!-- TAG SUGGESTIONS (helper, text only) -->
+<div id="tagSuggestions" class="tag-suggestions" hidden></div>
 
     <!-- EDITOR CARD -->
     <div class="editor-card" id="editorCard">
@@ -52,13 +52,9 @@
 
   </div>
 
-  <!-- FLOATING SAVE BUTTON (ABOVE KEYBOARD) -->
-  <button
-  id="editor-save-btn"
-  class="editor-save-btn"
-  type="button"
-  hidden>
-  Save
-</button>
+  <!-- SAVE BAR -->
+  <div class="save-bar">
+    <button id="saveBtn" type="button">Save</button>
+  </div>
 
 </section>
