--- a/index.html
+++ b/index.html
@@ -59,13 +59,19 @@
        CORE JS (UNCHANGED)
        ========================= -->
   <script src="js/core/time.js"></script>
-  <script src="js/core/utils.js"></script>
-  <script src="js/core/store.js"></script>
-  <script src="js/core/settings-store.js"></script>
-  <script src="js/core/theme.js"></script>
-  <script src="js/core/toast.js"></script>
-  <script src="js/core/tags.js"></script>
-  <script src="js/app.js"></script>
+<script src="js/core/utils.js"></script>
+<script src="js/core/store.js"></script>
+<script src="js/core/settings-store.js"></script>
+<script src="js/core/theme.js"></script>
+<script src="js/core/toast.js"></script>
+<script src="js/core/tags.js"></script>
+<script src="js/core/wallet-store.js"></script>
+
+<!-- APP -->
+<script src="js/app.js"></script>
+
+<!-- INTEGRATION (MODULE, SIDE EFFECT ONLY) -->
+<script type="module" src="js/integrations/telegram.js"></script>
   <!-- =========================
        SERVICE WORKER (ADD-ON)
        ========================= -->
