--- a/pages/home.html
+++ b/pages/home.html
@@ -8,6 +8,19 @@
     <button class="theme-btn icon">☀️ / 🌙</button>
   </header>
 
+<!-- SIGNAL STRIP (WALLET EVENTS) -->
+  <section
+    id="signalStrip"
+    class="signal-strip is-hidden"
+  >
+    <span class="signal-text">
+      🔔 0 wallet events
+    </span>
+    <span class="signal-action">
+      Review →
+    </span>
+  </section>
+
   <!-- DRAWER OVERLAY -->
   <div class="drawer-overlay" id="drawerOverlay"></div>
 
