--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <script src="js/core/toast.js"></script>
 <script src="js/core/tags.js"></script>
 <script src="js/core/wallet-store.js"></script>
-<script src="preset.js"></script>
+<script src="js/core/preset.js"></script>
 
 <!-- APP -->
 <script src="js/app.js"></script>
