--- a/index.html
+++ b/index.html
@@ -55,23 +55,32 @@
 </button>
   <div id="toastRoot" class="toast-root"></div>
 
-  <!-- =========================
-       CORE JS (UNCHANGED)
-       ========================= -->
-  <script src="js/core/time.js"></script>
+<!-- =========================
+     CORE JS
+     ========================= -->
+<script src="js/core/time.js"></script>
 <script src="js/core/utils.js"></script>
 <script src="js/core/store.js"></script>
 <script src="js/core/settings-store.js"></script>
 <script src="js/core/theme.js"></script>
 <script src="js/core/toast.js"></script>
 <script src="js/core/tags.js"></script>
+
+<!-- WALLET CORE (STATE FIRST) -->
 <script src="js/core/wallet-store.js"></script>
+<script src="js/core/wallet-scope.js"></script>
+
+<!-- PRESET (OPTIONAL SEED DATA) -->
 <script src="js/core/preset.js"></script>
 
-<!-- APP -->
+<!-- =========================
+     APP (BOOTSTRAP)
+     ========================= -->
 <script src="js/app.js"></script>
 
-<!-- INTEGRATION (MODULE, SIDE EFFECT ONLY) -->
+<!-- =========================
+     INTEGRATIONS (MODULE)
+     ========================= -->
 <script type="module" src="js/integrations/telegram.js"></script>
   <!-- =========================
        SERVICE WORKER (ADD-ON)
