--- a/pages/settings.html
+++ b/pages/settings.html
@@ -74,7 +74,7 @@
     Only events from wallets below will appear in DropNote.
   </p>
 
-  <div id="walletList" class="wallet-list"></div>
+  <div id="walletScopeList" class="wallet-scope-list"></div>
 
   <div class="setting-item">
     <input
@@ -82,7 +82,6 @@
       type="text"
       placeholder="Paste wallet address (0x… / Solana)"
     />
-    <button id="addWalletBtn">Add</button>
   </div>
 
   <p class="settings-note subtle">
